fix video layout issue

--- a/src/sass/modules/_slide.scss
+++ b/src/sass/modules/_slide.scss
@@ -14,6 +14,11 @@
     }
     &-home {
         position: relative;
+        video {
+            height: 100%;
+            width: 100%;
+            object-fit: cover;
+        }
         h1,
         h2,
         h3,
